Mon Jan 22 21:34:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - man/upsd.8, man/upsd.conf.5: remove -i and -p commandline options,
   add LISTEN parameter to upsd.conf, add IPv6 examples
 - man/upsclient.3, man/upscli_*.3: ups format upsname[@hostname[:port]],
   add default hostname "localhost", remove upscli_splitname where not
   applicable
 - man/upsc.8, man/upscmd.8, man/upslog.8, man/upsrw.8: ups format
   upsname[@hostname[:port]], add default hostname "localhost"
 - man/upsmon.8, man/upsmon.conf.5: ups format upsname[@hostname[:port]],
   add default hostname "localhost"

Mon Jan 22 06:02:55 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: added support for Tripplite SmartOnline SU1500RTXL2ua
 - scripts/path-to-subdriver.sh: updated for new user messages

Sun Jan 21 23:56:03 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - ChangeLog: converted all dates to UTC

Sun Jan 21 22:21:41 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: better messages for unrecognized productids.

Sun Jan 21 19:25:10 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - megatec: added a new parameter to override the battery empty and battery
   full voltages, used in the charge calculations
 - data/driver.list: a couple new models supported by megatec
 - docs/FAQ: removed fentonups reference
 - added myself to the AUTHORS and MAINTAINERS files

Sun Jan 21 10:42:29 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upslog.c, clients/upsimage.c, clients/upsc.c, clients/upsrw.c,
   clients/upscmd.c: allow specifying a UPS as upsname[@hostname[:port]]
   (default to 'localhost' if no hostname is specified)

Sat Jan 20 20:18:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/netuser.c, server/upsd.c: lowered loglevel for opening and
   closing connections from LOG_INFO to LOG_DEBUG [Alioth Bug #304113]

Sat Jan 20 19:36:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
